--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -3,4 +3,16 @@ commands:
     command: /opt/python/run/venv/bin/pip install --upgrade pip
     ignoreErrors: false
 
+commands:
+  pipinstall:
+    command: pip install -r requirements.txt
+    ignoreErrors: false
+
+commands:
+  mhcflurryget:
+    command: mhcflurry-downloads fetch
+    ignoreErrors: false
+
+
+
 
