--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -10,7 +10,8 @@ commands:
 
 commands:
   mhcflurryget:
-    command: sudo mhcflurry-downloads fetch
+    owner: root  
+    command: mhcflurry-downloads fetch
     ignoreErrors: false
 
 
