see if this fixes it

--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -10,7 +10,9 @@ commands:
 
 commands:
   mhcflurryget:
-    owner: root  
+    mode: "000755"
+    owner: root
+    group: root
     command: mhcflurry-downloads fetch
     ignoreErrors: false
 
