--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -2,20 +2,23 @@ commands:
   pip_upgrade:
     command: /opt/python/run/venv/bin/pip install --upgrade pip
     ignoreErrors: false
-
 commands:
   pipinstall:
     command: pip install -r requirements.txt
     ignoreErrors: false
-
 commands:
   mhcflurryget:
     mode: "000755"
     owner: root
     group: root
+    command: mkdir /tmp/foo
+    ignoreErrors: false
+commands:
+  mhcflurryget2:
+    mode: "000755"
+    owner: root
+    group: root
     command: mhcflurry-downloads fetch
     ignoreErrors: false
-
-
 
 
