see if this fixes

--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -7,6 +7,9 @@ commands:
     command: pip install -r requirements.txt
     ignoreErrors: false
 commands:
+  create_wsgi_home_dir:
+    command: if [ ! -d "/home/wsgi" ]; then echo "Creating directory /home/wsgi"; mkdir -p /home/wsgi; chown wsgi:wsgi /home/wsgi; else echo "Directory /home/wsgi already exists, all good!"; fi
+commands:
   mhcflurryget:
     mode: "000755"
     owner: root
