--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -10,6 +10,12 @@ commands:
   create_wsgi_home_dir:
     command: if [ ! -d "/home/wsgi" ]; then echo "Creating directory /home/wsgi"; mkdir -p /home/wsgi; chown wsgi:wsgi /home/wsgi; else echo "Directory /home/wsgi already exists, all good!"; fi
 commands:
+  a:
+    command: chown -R user /home/user/.theano
+commands:
+  b:
+    command: chmod -R 775 /home/user/.theano 
+commands:
   mhcflurryget:
     mode: "000755"
     owner: root
