--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -8,6 +8,9 @@ commands:
     ignoreErrors: false
 commands:
   create_wsgi_home_dir:
+    mode: "000755"
+    owner: root
+    group: root
     command: if [ ! -d "/home/wsgi" ]; then echo "Creating directory /home/wsgi"; mkdir -p /home/wsgi; chown wsgi:wsgi /home/wsgi; else echo "Directory /home/wsgi already exists, all good!"; fi
 commands:
   a:
