--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -1,6 +1,6 @@
 commands:
   pip_upgrade:
-    command: pip install --upgrade pip
+    command: /opt/python/run/venv/bin/pip install --upgrade pip
     ignoreErrors: false
 commands:
   pipinstall:
