--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -1,5 +1,8 @@
 commands:
   pip_upgrade:
+    mode: "000755"
+    owner: root
+    group: root
     command: /opt/python/run/venv/bin/pip install --upgrade pip
     ignoreErrors: false
 commands:
