this better work

--- a/.ebextensions/01upgrade_pip.config
+++ b/.ebextensions/01upgrade_pip.config
@@ -3,7 +3,7 @@ commands:
     mode: "000755"
     owner: root
     group: root
-    command: /opt/python/run/venv/bin/pip install --upgrade pip
+    command: sudo /opt/python/run/venv/bin/pip install --upgrade pip
     ignoreErrors: false
 commands:
   pipinstall:
